--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       box-sizing: border-box;
       -webkit-tap-highlight-color: transparent;
     }
+  
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
     body {
       margin: 0;
