--- a/index.html
+++ b/index.html
@@ -16,71 +16,113 @@
 
     body {
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", sans-serif;
-      background: #f5f5f7;
+      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", "Helvetica Neue", Arial, "PingFang SC", "Hiragino Sans GB", sans-serif;
+      background: radial-gradient(circle at top, #ffe8d9 0, #fff7f0 40%, #fff 100%);
       color: #222;
     }
 
     .app {
-      max-width: 600px;
+      max-width: 640px;
       margin: 0 auto;
-      padding: 16px;
+      padding: 18px 16px 32px;
+    }
+
+    .header {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 8px;
+    }
+
+    .header-icon {
+      width: 40px;
+      height: 40px;
+      border-radius: 12px;
+      background: #ffe0c7;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
     }
 
     h1 {
-      font-size: 20px;
-      margin: 0 0 12px;
-      text-align: center;
+      font-size: 22px;
+      margin: 0;
+      color: #543326;
     }
 
     .subtitle {
       font-size: 12px;
-      color: #666;
-      text-align: center;
+      color: #8c6f5b;
       margin-bottom: 16px;
     }
 
     .card {
-      background: #fff;
-      border-radius: 12px;
-      padding: 12px 14px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+      background: #ffffff;
+      border-radius: 18px;
+      padding: 14px 14px 12px;
+      box-shadow:
+        0 18px 40px rgba(180, 120, 80, 0.08),
+        0 1px 2px rgba(0,0,0,0.04);
       margin-bottom: 14px;
+      border: 1px solid rgba(255, 186, 140, 0.18);
+    }
+
+    .card-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 6px;
     }
 
     .card-title {
       font-size: 16px;
-      margin-bottom: 8px;
       font-weight: 600;
+      color: #5b3a29;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .card-title span.emoji {
+      font-size: 16px;
+    }
+
+    .card-subtitle {
+      font-size: 11px;
+      color: #b08a70;
+      margin-bottom: 4px;
     }
 
     label {
       display: block;
       font-size: 13px;
       margin-bottom: 4px;
-      color: #444;
+      color: #6b4b36;
     }
 
     input, select, textarea {
       width: 100%;
-      padding: 8px 10px;
+      padding: 9px 11px;
       font-size: 14px;
-      border-radius: 8px;
-      border: 1px solid #ddd;
+      border-radius: 12px;
+      border: 1px solid #e6d4c7;
       outline: none;
       -webkit-appearance: none;
       appearance: none;
-      background: #fff;
+      background: #fffdfb;
+      transition: border-color 0.15s ease, box-shadow 0.15s ease, background-color 0.15s ease;
     }
 
     input:focus, select:focus, textarea:focus {
-      border-color: #007aff;
-      box-shadow: 0 0 0 2px rgba(0,122,255,0.12);
+      border-color: #ff9e73;
+      box-shadow: 0 0 0 2px rgba(255, 158, 115, 0.18);
+      background: #fffbf7;
     }
 
     textarea {
       resize: vertical;
-      min-height: 60px;
+      min-height: 64px;
     }
 
     .form-row {
@@ -109,34 +151,48 @@
       cursor: pointer;
       width: 100%;
       font-weight: 600;
+      letter-spacing: 0.2px;
+      transition: transform 0.06s ease, box-shadow 0.12s ease, background-color 0.12s ease;
     }
 
     .btn-primary {
-      background: #007aff;
+      background: linear-gradient(135deg, #ff9f7b, #ffb88a);
       color: #fff;
+      box-shadow: 0 8px 16px rgba(255, 147, 101, 0.26);
     }
 
     .btn-primary:active {
-      background: #0062cc;
+      transform: translateY(1px);
+      box-shadow: 0 4px 10px rgba(255, 147, 101, 0.2);
+      background: linear-gradient(135deg, #ff8a5c, #ffaf7a);
     }
 
     .btn-secondary {
-      background: #f2f2f7;
-      color: #333;
+      background: #fff3e8;
+      color: #8a5b3a;
       font-size: 13px;
+      box-shadow: 0 2px 6px rgba(190, 130, 90, 0.06);
       margin-top: 6px;
     }
 
     .btn-secondary:active {
-      background: #e0e0e5;
+      transform: translateY(1px);
+      box-shadow: 0 1px 3px rgba(190, 130, 90, 0.1);
+      background: #ffe6d2;
     }
 
     .btn-text {
-      background: transparent;
+      background: #ffffff;
       border-radius: 999px;
-      border: 1px solid #ddd;
+      border: 1px solid #f0d8c7;
       margin-top: 6px;
       font-size: 13px;
+      color: #8a5b3a;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.02);
+    }
+
+    .btn-text:active {
+      background: #fff5ed;
     }
 
     .records-header {
@@ -149,108 +205,176 @@
     .records-header-title {
       font-size: 15px;
       font-weight: 600;
+      color: #5b3a29;
+      display: flex;
+      align-items: center;
+      gap: 4px;
+    }
+
+    .records-header-title span.emoji {
+      font-size: 15px;
     }
 
     .filter-select {
       width: auto;
-      padding: 4px 8px;
+      padding: 5px 9px;
       font-size: 12px;
+      border-radius: 999px;
+      background: #fffaf5;
+      border-color: #f1d6c4;
+      color: #7b5942;
     }
 
     .record-list {
       max-height: 60vh;
       overflow-y: auto;
+      padding-top: 2px;
     }
 
     .record-item {
-      padding: 8px 6px;
-      border-bottom: 1px solid #eee;
+      padding: 8px 6px 6px;
+      border-bottom: 1px dashed #f0dfd3;
+    }
+
+    .record-item:last-child {
+      border-bottom: none;
     }
 
     .record-main {
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      margin-bottom: 2px;
+      margin-bottom: 4px;
     }
 
     .record-time {
       font-size: 13px;
       font-weight: 500;
+      color: #68412f;
     }
 
     .record-tag {
-      font-size: 12px;
+      font-size: 11px;
       padding: 2px 8px;
       border-radius: 999px;
-      background: #f2f2f7;
+      background: #ffe9da;
+      color: #8a5330;
       margin-left: 4px;
     }
 
     .record-sub {
       font-size: 12px;
-      color: #666;
+      color: #99735b;
       margin-bottom: 2px;
     }
 
     .record-note {
       font-size: 12px;
-      color: #444;
+      color: #5f4c41;
       white-space: pre-wrap;
+      background: #fff6ef;
+      border-radius: 10px;
+      padding: 4px 8px;
+      margin-bottom: 4px;
     }
 
     .record-actions {
       text-align: right;
-      margin-top: 4px;
+      margin-top: 2px;
     }
 
     .link-btn {
       border: none;
       background: none;
-      color: #007aff;
       font-size: 12px;
       padding: 2px 4px;
       cursor: pointer;
       margin-left: 4px;
+      color: #ff985d;
     }
 
     .link-btn-danger {
-      color: #ff3b30;
+      color: #ff4f4f;
     }
 
     .empty-tip {
       font-size: 12px;
-      color: #999;
+      color: #b79a86;
       text-align: center;
-      padding: 12px 4px;
+      padding: 12px 4px 6px;
     }
 
     .footer-tip {
       text-align: center;
       font-size: 11px;
-      color: #999;
+      color: #a0826c;
       margin-top: 4px;
     }
 
     .editing-tip {
       margin-top: 6px;
       font-size: 11px;
-      color: #cc6600;
+      color: #b05a24;
       text-align: left;
     }
 
     .backup-note {
       font-size: 11px;
-      color: #666;
-      margin-top: 4px;
+      color: #8f7461;
+      margin-top: 6px;
+      line-height: 1.4;
+    }
+
+    /* 上次排便时间面板 */
+    #lastPoopPanel {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+
+    .last-poop-text {
+      font-size: 14px;
+      padding: 6px 8px;
+      border-radius: 12px;
+      background: #fff6ed;
+      color: #5b3a29;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .last-poop-text span.dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 999px;
+      background: #ff8f5d;
+      box-shadow: 0 0 0 4px rgba(255, 143, 93, 0.18);
+    }
+
+    .last-poop-text-empty {
+      background: #f9f0ea;
+      color: #a28a79;
+      box-shadow: none;
+    }
+
+    .last-poop-sub {
+      font-size: 11px;
+      color: #b08a70;
+    }
+
+    /* 备份文本框稍微柔和一点 */
+    #backupTextarea {
+      background: #fffaf6;
+      font-size: 12px;
+      line-height: 1.4;
     }
 
     @media (min-width: 600px) {
       body {
-        background: #e5e5ea;
+        background: radial-gradient(circle at top, #ffe1cf 0, #fff5eb 45%, #ffffff 100%);
       }
       .app {
-        padding: 20px 16px 40px;
+        padding: 24px 20px 40px;
       }
       #backupTextarea {
         min-height: 120px;
@@ -260,12 +384,40 @@
 </head>
 <body>
   <div class="app">
-    <h1>孕期排便记录</h1>
-    <div class="subtitle">数据保存在本机浏览器中 · 建议定期导出备份</div>
+    <div class="header">
+      <div class="header-icon">💩</div>
+      <div>
+        <h1>孕期排便记录</h1>
+        <div class="subtitle">温柔记录每一天的小小进展 · 数据只在这台设备上</div>
+      </div>
+    </div>
+
+    <!-- 上次排便时间面板 -->
+    <div class="card" id="lastPoopPanel">
+      <div class="card-header">
+        <div class="card-title">
+          <span class="emoji">⏰</span>
+          <span>上次排便时间</span>
+        </div>
+      </div>
+      <div id="lastPoopText" class="last-poop-text last-poop-text-empty">
+        暂无记录
+      </div>
+      <div class="last-poop-sub">
+        提示：记录越及时，这里显示的时间就越准确。
+      </div>
+    </div>
 
     <!-- 录入卡片 -->
     <div class="card">
-      <div class="card-title">今日记录</div>
+      <div class="card-header">
+        <div class="card-title">
+          <span class="emoji">📝</span>
+          <span>今日记录</span>
+        </div>
+      </div>
+      <div class="card-subtitle">简单几项，帮你们一起观察肠道状态～</div>
+
       <form id="poopForm">
         <div class="form-row-inline">
           <div class="form-row">
@@ -313,7 +465,7 @@
 
         <div class="form-row">
           <label for="noteInput">备注（饮食、药物、特别情况等）</label>
-          <textarea id="noteInput" placeholder="例如：今天喝水少，吃了很多肉；或服用了某种药物等"></textarea>
+          <textarea id="noteInput" placeholder="例如：今天喝水少，吃了很多肉；或服用了某种药物、腹部不适等"></textarea>
         </div>
 
         <button type="submit" id="submitBtn" class="btn btn-primary">保存记录</button>
@@ -328,7 +480,10 @@
     <!-- 历史记录卡片 -->
     <div class="card">
       <div class="records-header">
-        <div class="records-header-title">历史记录</div>
+        <div class="records-header-title">
+          <span class="emoji">📚</span>
+          <span>历史记录</span>
+        </div>
         <select id="filterDays" class="filter-select">
           <option value="3">最近 3 天</option>
           <option value="7" selected>最近 7 天</option>
@@ -341,22 +496,30 @@
 
     <!-- 备份与恢复卡片 -->
     <div class="card">
-      <div class="card-title">数据备份与恢复</div>
+      <div class="card-header">
+        <div class="card-title">
+          <span class="emoji">☁️</span>
+          <span>数据备份与恢复</span>
+        </div>
+      </div>
+      <div class="card-subtitle">建议不时导出一份备份，发到备忘录 / 微信收藏里。</div>
+
       <div class="form-row">
-        <button type="button" id="exportBtn" class="btn btn-secondary">导出数据（复制备份）</button>
+        <button type="button" id="exportBtn" class="btn btn-secondary">导出数据（复制备份文本）</button>
       </div>
       <div class="form-row">
         <label for="backupTextarea">备份文本</label>
-        <textarea id="backupTextarea" placeholder="点击上面的“导出数据”会在这里生成一段可复制的备份文本；也可以在这里粘贴之前的备份，再点击下面的“从备份导入”。"></textarea>
+        <textarea id="backupTextarea" placeholder="点击上方“导出数据”会在这里生成一段可复制的备份文本；也可以把之前的备份粘贴到这里，再点击下面的按钮进行恢复。"></textarea>
       </div>
       <button type="button" id="importBtn" class="btn btn-primary">从备份文本导入（覆盖当前数据）</button>
       <div class="backup-note">
-        导入会覆盖当前所有记录，请确保已经做好备份。建议：定期把导出文本保存到备忘录 / 云盘。
+        导入操作会覆盖当前所有记录，请先确认备份内容无误。<br />
+        小建议：可以以“日期 + 孕周”的方式给备份命名，方便以后回顾。
       </div>
     </div>
 
     <div class="footer-tip">
-      温馨提示：如有持续便秘、腹泻或出血等情况，请及时咨询医生。
+      温馨提示：如有持续便秘、腹泻、明显腹痛或出血等情况，请第一时间联系医生或就医，这个小工具只用于日常记录和辅助观察 😊
     </div>
   </div>
 
@@ -391,6 +554,66 @@
       return dateStr;
     }
 
+    // 取得最新一条记录
+    function getLatestLog(logs) {
+      if (!logs || !logs.length) return null;
+      return logs.reduce((latest, cur) => {
+        const tLatest = (latest.date || '') + ' ' + (latest.time || '00:00');
+        const tCur = (cur.date || '') + ' ' + (cur.time || '00:00');
+        return tCur > tLatest ? cur : latest;
+      });
+    }
+
+    // 更新“上次排便时间”面板
+    function updateLastPoopPanel() {
+      const textEl = document.getElementById('lastPoopText');
+      if (!textEl) return;
+
+      const logs = loadLogs();
+      if (!logs.length) {
+        textEl.innerHTML = '暂无记录';
+        textEl.classList.add('last-poop-text-empty');
+        return;
+      }
+
+      const latest = getLatestLog(logs);
+      if (!latest || !latest.date) {
+        textEl.innerHTML = '暂无记录';
+        textEl.classList.add('last-poop-text-empty');
+        return;
+      }
+
+      const dateTimeStr = `${latest.date}T${latest.time || '00:00'}`;
+      const lastTime = new Date(dateTimeStr);
+      const now = new Date();
+
+      if (isNaN(lastTime.getTime())) {
+        textEl.textContent = '最近一条记录时间格式有问题，请检查日期和时间。';
+        textEl.classList.remove('last-poop-text-empty');
+        return;
+      }
+
+      let diffMs = now - lastTime;
+
+      if (diffMs < 0) {
+        textEl.textContent = '最近一条记录在未来，请检查日期或时间设置。';
+        textEl.classList.remove('last-poop-text-empty');
+        return;
+      }
+
+      const totalMinutes = Math.floor(diffMs / 60000);
+      const days = Math.floor(totalMinutes / (24 * 60));
+      const remainMin = totalMinutes - days * 24 * 60;
+      const hours = Math.floor(remainMin / 60);
+      const minutes = remainMin % 60;
+
+      textEl.innerHTML = `
+        <span class="dot"></span>
+        <span>上次排便为 ${days}天${hours}时${minutes}分 前</span>
+      `;
+      textEl.classList.remove('last-poop-text-empty');
+    }
+
     function renderList() {
       const container = document.getElementById('recordList');
       const filterValue = document.getElementById('filterDays').value;
@@ -414,7 +637,9 @@
       }
 
       if (!logs.length) {
-        container.innerHTML = '<div class="empty-tip">暂无记录</div>';
+        container.innerHTML = '<div class="empty-tip">暂无记录，可以从今天开始一点点记录～</div>';
+        // 如果筛选后为空，也要更新上次排便面板（根据全部而不是筛选）
+        updateLastPoopPanel();
         return;
       }
 
@@ -446,7 +671,6 @@
         container.appendChild(wrapper);
       });
 
-      // 事件委托处理编辑 & 删除
       container.onclick = function (e) {
         const btn = e.target.closest('button[data-action]');
         if (!btn) return;
@@ -459,6 +683,9 @@
           startEditLog(id);
         }
       };
+
+      // 渲染完列表后更新“上次排便时间”
+      updateLastPoopPanel();
     }
 
     function deleteLogById(id) {
@@ -619,7 +846,7 @@
         textarea.value = JSON.stringify(payload, null, 2);
         textarea.focus();
         textarea.select();
-        alert('已生成备份文本，请长按选择并复制，保存到备忘录或其他地方。');
+        alert('已生成备份文本，请长按选择并复制，保存到备忘录或其他安全位置。');
       });
 
       importBtn.addEventListener('click', () => {
@@ -649,6 +876,7 @@
           saveLogs(data);
           resetEditState();
           renderList();
+          updateLastPoopPanel();
           alert('导入成功！当前数据已被备份内容覆盖。');
         } catch (e) {
           console.error(e);
@@ -661,6 +889,9 @@
       initForm();
       renderList();
       initBackup();
+      updateLastPoopPanel();
+      // 每 1 分钟自动刷新一次上次排便时间显示
+      setInterval(updateLastPoopPanel, 60 * 1000);
     });
   </script>
 </body>
